# clanker

./: .env.example  .gitignore  1  Cargo.toml  LICENSE  README.md
assets/: prompt.txt
src/: handler.rs  main.rs  model.rs  openai.rs
