[package]
name = "clanker"
version = "0.1.0"
edition = "2024"
default-run = "clanker"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
serenity = "0.12.5"

[dependencies.reqwest]
version = "0.12.28"
features = ["json"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt-multi-thread"]
